# easy_pipe

./: .editorconfig  .gitignore  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release-acceptance.yml
docs/: backup-retention-runbook.md  capacity-and-quota-runbook.md  cli-reference.md  generated-project.md  incident-response-runbook.md  installation.md  internal-pilot-evidence.md  internal-pilot-runbook.md  key-rotation-runbook.md  known-limitations.md  m4-validation-testing.md  manifest-workflow.md  operations.md  probe-protocol.md  real-host-acceptance.md  release-checklist.md  release-evidence.md  remote-deployment.md  schema-v1.md  security-model.md  troubleshooting.md
docs/adr/: 0001-architecture.md  0002-m7-slurm-launch-contract.md  0003-m7-versioned-scheduler-contracts.md  0004-m7-compute-preflight-contract.md  0005-m7-trusted-scheduler-config-loader.md  0006-m7-bounded-scheduler-transport.md  0007-m7-durable-scheduler-preflight-state.md  0008-m7-fixed-compute-preflight-worker.md  0009-m7-durable-preflight-driver.md  0010-m7-durable-capability-lifecycle.md  0011-m7-durable-run-bootstrap.md  0012-m7-fixed-workload-contract.md
environments/: m4-test.yml
environments/locks/: README.md  SHA256SUMS  containers.json  direct-dependencies.json  linux-64.explicit.txt  linux-64.inventory.json  lock-metadata.json  osx-arm64.explicit.txt  osx-arm64.inventory.json  remote-zipapps.json
examples/demo/: README.md  overrides.json
examples/demo/input/: SyntheticDemo_S1_L001_R1_001.fastq  SyntheticDemo_S1_L001_R2_001.fastq  SyntheticDemo_S1_L002_R1_001.fastq  SyntheticDemo_S1_L002_R2_001.fastq
release-evidence/: .gitignore  README.md
release-evidence/template/: acceptance-summary.json  coverage-summary.txt  environment-explicit.txt  real-host-acceptance.json  reviewer-signoff.md  rollback-and-key-rotation.md  test-summary.txt
remote_executor/: README.md  build_zipapp.py
remote_executor/examples/: config.json
remote_executor/src/bioexec/: __init__.py  __main__.py  commands.py  compute_bootstrap.py  compute_worker.py  config.py  deployment.py  errors.py  main.py  paths.py  preflight.py  protocol.py  runner.py  scheduler_bindings.py  scheduler_clock.py  scheduler_config.py  scheduler_config_loader.py  scheduler_driver.py  scheduler_preflight.py  scheduler_protocol.py  scheduler_run.py  scheduler_runner.py  scheduler_state.py  scheduler_workload.py  slurm.py  state.py
remote_executor/tests/: __init__.py  conftest.py  test_compute_bootstrap.py  test_compute_worker.py  test_deployment_and_runner.py  test_preflight.py  test_protocol_and_paths.py  test_scheduler_clock.py  test_scheduler_config.py  test_scheduler_config_loader.py  test_scheduler_driver.py  test_scheduler_preflight.py  test_scheduler_protocol.py  test_scheduler_run.py  test_scheduler_runner.py  test_scheduler_state.py  test_scheduler_workload.py  test_slurm.py  test_zipapp.py
remote_probe/: README.md  build_zipapp.py
remote_probe/examples/: config.json
remote_probe/src/bioprobe/: __init__.py  __main__.py  config.py  errors.py  fastq.py  main.py  operations.py  paths.py  protocol.py  service.py
remote_probe/tests/: test_fastq_operations.py  test_fd_security.py
scripts/: collect_internal_pilot_evidence.py  collect_real_host_evidence.py  create_release_acceptance_evidence.py  create_release_evidence.py  demo_release_acceptance.sh  generate_supply_chain_inventory.py  real_host_acceptance.sh  verify_installed_package.py  verify_release_acceptance_junit.py
src/biopipe/: __init__.py  __main__.py  artifacts.py  audit.py  errors.py  inspection.py  io.py  models.py  report_models.py  schemas.py  version.py
src/biopipe/cli/: __init__.py  app.py  common.py  execution_profile.py  generate.py  inspect.py  manifest.py  plan.py  preflight.py  reports.py  run.py  schema.py  source.py  test.py  validate.py  version.py
src/biopipe/compiler/: __init__.py  compiler.py  store.py  templates.py
src/biopipe/detectors/: __init__.py  fastq.py  models.py  naming.py
src/biopipe/execution/: __init__.py  client.py  deploy.py  gate.py  models.py  preflight.py  profiles.py  reports.py  runner.py  scheduler_models.py  signing.py
src/biopipe/manifests/: __init__.py  builder.py  integrity.py  overrides.py  privacy.py  samplesheet.py  store.py
src/biopipe/planner/: __init__.py  fastq_qc.py
src/biopipe/probe/: __init__.py  (+3 more)
tests/: conftest.py  pilot_evidence_support.py  real_host_evidence_support.py
tests/fixtures/: README.md
tests/golden/: test_m2_golden_cases.py  test_m2_probe_golden_cases.py
tests/integration/: test_controller_probe_e2e.py  test_m1_cli.py  test_m2_cli.py  test_m2_controller_probe_e2e.py  test_m3_cli.py  test_m5_cli.py  test_m5_controller_executor_e2e.py  test_m6_release_acceptance.py  test_pilot_record_cli.py  test_probe_zipapp.py  test_real_host_acceptance_script.py  test_release_evidence_cli.py  test_remote_probe_jsonl.py  test_source_registry.py  test_ssh_controller.py
tests/security/: conftest.py  test_bounded_probe_runner.py  test_fastq_result_security.py  test_pilot_evidence_security.py  test_pilot_record_authoring_security.py  test_probe_path_security.py  test_probe_protocol_security.py  test_probe_result_security.py  test_real_host_evidence_security.py  test_release_acceptance_workflow.py  test_release_evidence_security.py  test_source_registry_security.py  test_ssh_security.py  test_supply_chain_inventory.py  test_workflow_action_pins.py
tests/unit/: test_artifacts.py  test_audit.py  test_cli.py  test_compiler.py  test_detectors.py  test_errors.py  test_inspection.py  test_io.py  test_m3_planner_registry.py  test_m4_cli.py  test_m5_controller.py  test_m5_models_gate.py  test_m5_signing.py  test_m62_operations_runbooks.py  test_m6_dry_run.py  test_m6_version_contract.py  test_m7_scheduler_models.py  test_manifests.py  test_models.py  test_pilot_evidence.py  test_pilot_record_authoring.py  test_real_host_evidence.py  test_release_acceptance_ci.py  test_release_evidence.py  test_schemas.py  test_validation.py  test_workflow_test.py
(+93 files in other folders)
