[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-pipe"
version = "0.1.0"
description = "Local-first, remote-data-aware bioinformatics pipeline builder"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Wei Lyu" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "Jinja2>=3.1,<4",
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "rich>=13,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
biopipe = "biopipe.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"biopipe.compiler" = [
  "_templates/project/*.j2",
  "_templates/project/conf/*.j2",
  "_templates/project/tests/*.j2",
  "_templates/project/tests/fixtures/*.j2",
  "_templates/project/tests/fixtures/*/*.j2",
  "_templates/project/tests/fixtures/*/reads/*.j2",
  "_templates/components/*/*.j2",
]
"biopipe.registry" = ["data/*.yaml"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests", "remote_probe/tests"]
pythonpath = ["src", "remote_probe/src"]

[tool.coverage.run]
branch = true
source = ["biopipe", "bioprobe"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "remote_probe/src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/biopipe/cli/*.py" = ["B008"]
"src/biopipe/errors.py" = ["UP042"]
"tests/**" = ["S101", "UP017"]

[tool.ruff.lint.isort]
known-first-party = ["biopipe", "bioprobe"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
packages = ["biopipe", "bioprobe"]
mypy_path = "src:remote_probe/src"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
