[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-pipe"
dynamic = ["version"]
description = "Local-first, remote-data-aware bioinformatics pipeline builder"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
  { name = "Wei Lyu" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "Jinja2>=3.1,<4",
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "rich>=13,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
biopipe = "biopipe.cli:app"

[tool.setuptools.dynamic]
version = { attr = "biopipe.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"biopipe" = ["schema_v1/*.json"]
"biopipe.compiler" = [
  "_templates/project/*.j2",
  "_templates/project/conf/*.j2",
  "_templates/project/tests/*.j2",
  "_templates/project/tests/fixtures/*.j2",
  "_templates/project/tests/fixtures/*/*.j2",
  "_templates/project/tests/fixtures/*/reads/*.j2",
  "_templates/components/*/*.j2",
]
"biopipe.registry" = ["data/*.yaml"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests", "remote_probe/tests", "remote_executor/tests"]
pythonpath = ["src", "remote_probe/src", "remote_executor/src"]

[tool.coverage.run]
branch = true
source = ["biopipe", "bioprobe", "bioexec"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "remote_probe/src", "remote_executor/src", "tests", "remote_executor/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/biopipe/cli/*.py" = ["B008"]
"src/biopipe/errors.py" = ["UP042"]
"tests/**" = ["S101", "UP017"]
"remote_executor/tests/**" = ["S101", "UP017"]

[tool.ruff.lint.isort]
known-first-party = ["biopipe", "bioprobe", "bioexec"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]
packages = ["biopipe", "bioprobe", "bioexec"]
mypy_path = "src:remote_probe/src:remote_executor/src"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
